--- a/todo-app/backend/package.json
+++ b/todo-app/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/loader.ts",
   "scripts": {
     "dev": "nodemon",
-    "production": "pm2 start src/loader.js --name todo-app"
+    "production": "pm2 start src/loader.ts --name todo-app"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,15 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
-    "mongoose": "^4.13.21",
-    "node-restful": "^0.2.6",
-    "pm2": "^5.4.2"
+    "mongoose": "^8.7.1",
+    "pm2": "^5.4.2",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
+    "concurrently": "^9.0.1",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2"
   }
 }
