--- a/todo-app/frontend/package.json
+++ b/todo-app/frontend/package.json
@@ -49,7 +49,11 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-promise": "^0.5.32",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-multi": "^0.1.12",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^3.1.0"
   }
 }
